[gd_scene load_steps=11 format=3 uid="uid://ce2vo2hdto1h1"]

[ext_resource type="Script" path="res://Levels/Fail Level/fail_container.gd" id="1_dk1xb"]
[ext_resource type="Texture2D" uid="uid://c7di8sqq2pcth" path="res://Levels/Fail Level/Kotak plain.PNG" id="1_igknc"]
[ext_resource type="FontFile" uid="uid://e1s7fhiq80fb" path="res://Common/Pause Menu/Visual Assets/endless-smile/Endless Smile.ttf" id="2_nb67j"]
[ext_resource type="Texture2D" uid="uid://cenjckkybtyom" path="res://Levels/Level Solved Window/levelselection.png" id="3_ovpe2"]
[ext_resource type="Texture2D" uid="uid://bxt8jnbfqx416" path="res://Levels/Level Solved Window/levelselection hover.png" id="4_rxyja"]
[ext_resource type="Texture2D" uid="uid://6k271ax6k87g" path="res://Levels/Level Solved Window/home.png" id="5_5ren5"]
[ext_resource type="Texture2D" uid="uid://msbb8nqh057" path="res://Levels/Level Solved Window/home hover.png" id="6_erpx3"]
[ext_resource type="Texture2D" uid="uid://dtqfabj4yxevk" path="res://Levels/Fail Level/Replay.PNG" id="7_f0uv8"]
[ext_resource type="Texture2D" uid="uid://dijlguqo1f6dw" path="res://Levels/Fail Level/Replay hover.PNG" id="8_t5fyh"]
[ext_resource type="AudioStream" uid="uid://bqsdcwbb6f6ov" path="res://Audio/click4.ogg" id="10_4jy05"]

[node name="FailContainer" type="CenterContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dk1xb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_igknc")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.0196078, 0.180392, 0.498039, 1)
theme_override_fonts/font = ExtResource("2_nb67j")
theme_override_font_sizes/font_size = 150
text = "YOU FAILED"

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="SelectionButton" type="TextureButton" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("3_ovpe2")
texture_pressed = ExtResource("4_rxyja")
texture_hover = ExtResource("4_rxyja")

[node name="HomeButton" type="TextureButton" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("5_5ren5")
texture_pressed = ExtResource("6_erpx3")
texture_hover = ExtResource("6_erpx3")

[node name="RetryButton" type="TextureButton" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("7_f0uv8")
texture_pressed = ExtResource("8_t5fyh")
texture_hover = ExtResource("8_t5fyh")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_4jy05")

[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/SelectionButton" to="." method="_on_selection_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
